@@ -14,14 +14,20 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
+import java.awt.geom.AffineTransform;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.attribute.FileTime;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.ExecutionException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -39,22 +45,26 @@ import javax.swing.JPanel;
 import javax.swing.JPopupMenu;
 import javax.swing.JRadioButton;
 import javax.swing.JTabbedPane;
+import javax.swing.SwingWorker;
 import javax.swing.ToolTipManager;
 
 import org.vorthmann.j3d.J3dComponentFactory;
 import org.vorthmann.j3d.Platform;
-import org.vorthmann.ui.Controller;
-import org.vorthmann.ui.DefaultController;
 import org.vorthmann.ui.ExclusiveAction;
 
 import com.vzome.core.render.Scene;
-import com.vzome.desktop.controller.RenderingViewer;
+import com.vzome.desktop.api.Controller;
+import com.vzome.desktop.awt.GraphicsController;
+import com.vzome.desktop.awt.RenderingViewer;
+import com.vzome.desktop.controller.DefaultController;
 
 public class DocumentFrame extends JFrame implements PropertyChangeListener, ControlActions
 {
     private static final long serialVersionUID = 1L;
 
-    protected final Controller mController, toolsController;
+    protected final GraphicsController mController;
+    
+    protected final Controller toolsController;
 
     private final ModelPanel modelPanel;
             
@@ -70,19 +80,17 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
 
     private LessonPanel lessonPanel;
     
-    private JFrame zomicFrame, zomodFrame, pythonFrame;
+    private JFrame zomicFrame, zomodFrame; //, pythonFrame;
 
     private JButton snapshotButton;
 
-    private JRadioButton articleButton, modelButton;
+    private JRadioButton scenesButton, designButton;
 
     private JPanel viewControl, modelArticleEditPanel;
 
     private JLabel statusText;
 
-    private Controller cameraController;
-
-    private Controller lessonController;
+    private GraphicsController lessonController, cameraController;
     
     private JDialog polytopesDialog, importScaleDialog;
     
@@ -109,20 +117,14 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
         return mExcluder;
     }
     
-    private void createLessonPanel()
-    {
-    	if ( lessonPanel != null )
-    		return;
-        lessonPanel = new LessonPanel( lessonController );
-        modelArticleEditPanel .add( lessonPanel, "article" );
-    }
+    private static final JColorChooser colorChooser = new JColorChooser();
     
     void setAppUI( PropertyChangeListener appUI )
     {
     	this .appUI = appUI;
     }
         
-    public DocumentFrame( final Controller controller, final J3dComponentFactory factory3d )
+    public DocumentFrame( final GraphicsController controller, final J3dComponentFactory factory3d )
     {
         mController = controller;
         mController .addPropertyListener( this );
@@ -157,8 +159,9 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                     // don't want a stack trace for a user error
                     logger.log( Level.WARNING, errorCode );
                 } else if ( Controller.UNKNOWN_ERROR_CODE.equals( errorCode ) ) {
-                    errorCode = ( (Exception) arguments[0] ).getMessage();
-                    logger.log( Level.WARNING, "internal error: " + errorCode, ( (Exception) arguments[0] ) );
+                	Exception e  = (Exception) arguments[0];
+                	e.printStackTrace();
+                    logger.log( Level.WARNING, "internal error: " + e.getMessage(), e );
                     errorCode = "internal error has been logged";
                 } else {
                     logger.log( Level.WARNING, "reporting error: " + errorCode, arguments );
@@ -225,18 +228,28 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                     break;
 
                 case "Share":
-                    String windowName = mController .getProperty( "window.file" );
-                    if ( windowName == null ) {
+                    String filePathStr = mController .getProperty( "original.path" );
+                    if ( filePathStr == null ) {
                         JOptionPane .showMessageDialog( DocumentFrame.this, "You must save your model before you can share it.",
                                 "Command Failure", JOptionPane .ERROR_MESSAGE );
                         return;
                     }
                     if ( shareDialog == null )
                         shareDialog = new ShareDialog( DocumentFrame.this, mController );
-                    Path filePath = new File( windowName ) .toPath();
+                    Path filePath = Paths.get( filePathStr );
+                    LocalDateTime lastMod = LocalDateTime.now();
+                    if ( mController .propertyIsTrue( "share.last.mod.time" ) ) {
+                        try {
+                            FileTime fileTime = Files.getLastModifiedTime( Paths.get( filePathStr ) );
+                            lastMod = LocalDateTime.ofInstant( fileTime.toInstant(), ZoneId.systemDefault() );
+                        } catch (IOException e2) {
+                            logger.log( Level.INFO, "Unable to get last mod time for " + filePathStr );
+                        }
+                    }
                     String xml = mController .getProperty( "vZome-xml" );
                     String pngEncoded = mController .getProperty( "png-base64" );
-                    shareDialog .startUpload( filePath .getFileName() .toString(), xml, pngEncoded );
+                    String shapesJson = mController .getProperty( "shapes-json" );
+                    shareDialog .startUpload( filePath .getFileName() .toString(), lastMod, xml, pngEncoded, shapesJson );
                     break;
 
                 case "saveDefault":
@@ -279,7 +292,7 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                     
                 case "snapshot.2d":
                     if ( snapshot2dFrame == null ) {
-                        snapshot2dFrame = new Snapshot2dFrame( mController.getSubController( "snapshot.2d" ), fileDialog );
+                        snapshot2dFrame = new Snapshot2dFrame( (GraphicsController) mController.getSubController( "snapshot.2d" ), fileDialog );
                     }
                     snapshot2dFrame.setPanelSize( modelPanel .getRenderedSize() );
                     snapshot2dFrame.pack();
@@ -312,14 +325,14 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                     polytopesDialog .setVisible( true );
                     break;
                 
-                case "showPythonWindow":
-                    if ( pythonFrame == null ) {
-                        pythonFrame = new JFrame( "Python Scripting" );
-                        pythonFrame .setContentPane( new PythonConsolePanel( pythonFrame, mController ) );
-                    }
-                    pythonFrame .pack();
-                    pythonFrame .setVisible( true );
-                    break;
+//                case "showPythonWindow":
+//                    if ( pythonFrame == null ) {
+//                        pythonFrame = new JFrame( "Python Scripting" );
+//                        pythonFrame .setContentPane( new PythonConsolePanel( pythonFrame, mController ) );
+//                    }
+//                    pythonFrame .pack();
+//                    pythonFrame .setVisible( true );
+//                    break;
                     
                 case "showZomicWindow":
                     if ( zomicFrame == null ) {
@@ -339,26 +352,48 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                     zomodFrame .setVisible( true );
                     break;
                 
-                case "setItemColor":
+                case "setItemColor": {
                     Long intval = Long.decode( mController .getProperty( "lastObjectColor" ) );
                     int i = intval.intValue();
                     Color color = new Color((i >> 24) & 0xFF, (i >> 16) & 0xFF, (i >> 8) & 0xFF, i & 0xFF);
-                    color = JColorChooser.showDialog( DocumentFrame.this, "Choose Object Color", color );
-                    if ( color == null )
-                        return;
-                    int rgb = color .getRGB() & 0xffffff;
-                    int alpha = color .getAlpha() & 0xff;
-                    String colorString = Integer.toHexString( ( rgb << 8 ) | alpha );
-                    mController .setProperty( "lastObjectColor", "#"+colorString );
-                    String command = "ColorManifestations/" + colorString;
-                    mController .actionPerformed( e .getSource(), command );
+                    colorChooser .setColor( color );
+                    final JDialog dialog = JColorChooser.createDialog( DocumentFrame.this, "Choose Object Color", true, colorChooser,
+                        new ActionListener() {
+                            
+                            @Override
+                            public void actionPerformed( ActionEvent e )
+                            {
+                                Color color = colorChooser .getColor();
+                                if ( color == null )
+                                    return;
+                                int rgb = color .getRGB() & 0xffffff;
+                                int alpha = color .getAlpha() & 0xff;
+                                String colorString = Integer.toHexString( ( rgb << 8 ) | alpha );
+                                mController .setProperty( "lastObjectColor", "#"+colorString );
+                                String command = "ColorManifestations/" + colorString;
+                                mController .actionPerformed( e .getSource(), command );
+                            }
+                        }, null );
+                    dialog .setVisible( true );
+                }
                     break;
                     
-                case "setBackgroundColor":
-                    color = Color.decode( mController .getProperty( "backgroundColor" ) );
-                    color = JColorChooser.showDialog( DocumentFrame.this, "Choose Background Color", color );
-                    if ( color != null )
-                        mController .setProperty( "backgroundColor", Integer.toHexString( color.getRGB() & 0xffffff ) );
+                case "setBackgroundColor": {
+                    Color color = Color.decode( mController .getProperty( "backgroundColor" ) );
+                    colorChooser .setColor( color );
+                    final JDialog dialog = JColorChooser.createDialog( DocumentFrame.this, "Choose Background Color", true, colorChooser,
+                        new ActionListener() {
+                            
+                            @Override
+                            public void actionPerformed( ActionEvent e )
+                            {
+                                Color color = colorChooser .getColor();
+                                if ( color != null )
+                                    mController .setProperty( "backgroundColor", Integer.toHexString( color.getRGB() & 0xffffff ) );
+                            }
+                        }, null );
+                    dialog .setVisible( true );
+                }
                     break;
                 
                 case "usedOrbits":
@@ -415,12 +450,24 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                             importScaleDialog = new VefImportDialog( DocumentFrame.this, importScaleController, "Set Scale and Rotation",
                                 new ControllerFileAction( fileDialog, true, cmd, "vef", controller ) );
                         }
+                        try {
+                            // The polytopesController knows how to pre-load the quaternion based on a selected strut.
+                            // TODO: It's probably better to teach the importScaleController how to do it too
+                            // or else make one of them a subcontroller of the other 
+                            // so we don't need to invoke them seperately.
+                            polytopesController = mController .getSubController( "polytopes" );
+                            polytopesController.actionPerformed(DocumentFrame.this, "setQuaternion");
+                        } catch (Exception e1) {
+                            errors.reportError(Controller.USER_ERROR_CODE, new Object[] { e1 });
+                        }
                         importScaleDialog .setVisible( true );
                     }
                     else if ( cmd .startsWith( "setSymmetry." ) )
                     {
                         system = cmd .substring( "setSymmetry.".length() );
-                        mController .actionPerformed( e .getSource(), e .getActionCommand() ); // TODO getExclusiveAction
+                        ExclusiveAction exclusiveAction = getExclusiveAction( cmd, mController );
+                        exclusiveAction .actionPerformed( e );
+//                        mController .actionPerformed( e .getSource(), e .getActionCommand() ); // TODO getExclusiveAction
                     }
                     else if ( cmd .startsWith( "execCommandLine/" ) )
                     {
@@ -455,8 +502,8 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
 
         // -------------------------------------- create panels and tools
 
-        cameraController = mController .getSubController( "camera" );
-        lessonController = mController .getSubController( "lesson" );
+        cameraController = (GraphicsController) mController .getSubController( "camera" );
+        lessonController = (GraphicsController) mController .getSubController( "lesson" );
         lessonController .addPropertyListener( this );
 
         ControllerActionListener actionListener = new ControllerActionListener( this .mController );
@@ -471,17 +518,33 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                 if ( this .isEditor )
                 {
                     JPanel modeAndStatusPanel = new JPanel( new BorderLayout() );
-                    JPanel articleButtonsPanel = new JPanel();
-                    modeAndStatusPanel .add( articleButtonsPanel, BorderLayout.LINE_START );
+                    JPanel designScenesToggle = new JPanel();
+                    modeAndStatusPanel .add( designScenesToggle, BorderLayout.LINE_START );
+                    
+                    designScenesToggle .add( new JLabel( "Show:" ) );
 
                     ButtonGroup group = new ButtonGroup();
-                    modelButton  = new JRadioButton( "Model" );
-                    modelButton .setSelected( true );
-                    articleButtonsPanel .add( modelButton );
-                    group .add( modelButton );
-                    modelButton .setActionCommand( "switchToModel" );
-                    modelButton .addActionListener( actionListener );
-                    snapshotButton = new JButton( "-> capture ->" );
+                    
+                    designButton  = new JRadioButton( "Design" );
+                    designButton .setSelected( true );
+                    designScenesToggle .add( designButton );
+                    group .add( designButton );
+                    designButton .setActionCommand( "switchToModel" );
+                    designButton .addActionListener( actionListener );
+                    
+                    scenesButton  = new JRadioButton( "Scenes" );
+                    scenesButton .setEnabled( false ); // don't check the model, which may be loading concurrently.  PCE will come in due course
+                    scenesButton .setSelected( false );
+                    designScenesToggle .add( scenesButton );
+                    group .add( scenesButton );
+                    scenesButton .setActionCommand( "switchToArticle" );
+                    scenesButton .addActionListener( actionListener );
+
+                    JPanel spacer = new JPanel();
+                    spacer .setMinimumSize( new Dimension( 13, 0 ) );
+                    designScenesToggle .add( spacer );
+
+                    snapshotButton = new JButton( "Capture Scene" );
                     //                String imgLocation = "/icons/snapshot.png";
                     //                URL imageURL = getClass().getResource( imgLocation );
                     //                if ( imageURL != null ) {
@@ -492,26 +555,19 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                     //                    snapshotButton .setMaximumSize( dim );
                     //                }
                     if ( controller .propertyIsTrue( "enable.article.creation" ) )
-                        articleButtonsPanel .add( snapshotButton );
+                        designScenesToggle .add( snapshotButton );
                     snapshotButton .setActionCommand( "takeSnapshot" );
                     snapshotButton .addActionListener( new ActionListener()
                     {
-						@Override
+                        @Override
                         public void actionPerformed( ActionEvent e )
                         {
                             mController .actionPerformed( e .getSource(), e .getActionCommand() ); // sends thumbnailChanged propertyChange, but no listener...
-                            articleButton .doClick();  // switch to article mode, so now there's a listener
+                            scenesButton .doClick();  // switch to article mode, so now there's a listener
                             // now trigger the propertyChange again
                             lessonController .actionPerformed( DocumentFrame.this, "setView" );
                         }
                     } );
-                    articleButton  = new JRadioButton( "Article" );
-                    articleButton .setEnabled( lessonController .propertyIsTrue( "has.pages" ) );
-                    articleButton .setSelected( false );
-                    articleButtonsPanel .add( articleButton );
-                    group .add( articleButton );
-                    articleButton .setActionCommand( "switchToArticle" );
-                    articleButton .addActionListener( actionListener );
 
                     JPanel statusPanel = new JPanel( new BorderLayout() );
                     statusPanel .setBorder( BorderFactory .createEmptyBorder( 4, 4, 4, 4 ) );
@@ -525,8 +581,12 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                 }
 
                 Scene scene = ((Scene.Provider) mController) .getScene();
-                RenderingViewer viewer = factory3d .createRenderingViewer( scene );
-                modelPanel = new ModelPanel( mController, viewer, (ControlActions) this, this .isEditor, fullPower );
+                
+                // heavyweight (lightweight==false) renders with a much better frame rate,
+                //   and this canvas always redraws correctly during window resize.
+                RenderingViewer viewer = factory3d .createRenderingViewer( scene, false );
+
+                modelPanel = new ModelPanel( mController, viewer, this, this .isEditor, fullPower );
                 leftCenterPanel .add( modelPanel, BorderLayout.CENTER );
             }
             outerPanel.add( leftCenterPanel, BorderLayout.CENTER );
@@ -541,7 +601,11 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
             JPanel rightPanel = new JPanel( new BorderLayout() );
             {
                 Scene scene = ((Scene.Provider) cameraController) .getScene();
-                RenderingViewer viewer = factory3d .createRenderingViewer( scene );
+                
+                // lightweight==true lays out correctly during window resize, though
+                //   it delivers a lower frame rate.  See JoglFactory comments.
+                RenderingViewer viewer = factory3d .createRenderingViewer( scene, true );
+                
                 viewControl = new CameraControlPanel( viewer, cameraController );
                 // this is probably moot for reader mode
                 rightPanel .add( viewControl, BorderLayout.PAGE_START );
@@ -574,6 +638,10 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                         modelArticleEditPanel .add( buildPanel, "model" );
                 }
 
+                // We always create this, whether we'll need it or not, to simplify the MVC
+                //  interactions and concurrency.
+                lessonPanel = new LessonPanel( lessonController );
+                modelArticleEditPanel .add( lessonPanel, "article" );
                 if ( this .isEditor )
                 {
                     modelArticleCardLayout .show( modelArticleEditPanel, "model" );
@@ -582,7 +650,6 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                 }
                 else
                 {
-                	createLessonPanel();
                     modelArticleCardLayout .show( modelArticleEditPanel, "article" );
                     modelArticleEditPanel .setMinimumSize( new Dimension( 400, 500 ) );
                     modelArticleEditPanel .setPreferredSize( new Dimension( 400, 800 ) );
@@ -629,108 +696,178 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
 		// Default to opening the window as maximized on the selected (or default) monitor.
 		GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
 		GraphicsDevice[] gs = ge.getScreenDevices();
-		if(gs.length > 0) {
-			int bestIndex = 0;
-			GraphicsDevice bestDevice = gs[bestIndex];
-			DisplayMode bestMode = bestDevice.getDisplayMode();
-			int bestArea = bestMode.getHeight() * bestMode.getWidth();
-			for (int i = bestIndex+1; i < gs.length; i++) {
-				GraphicsDevice testDevice = gs[i];
-				DisplayMode testMode = testDevice.getDisplayMode();
-				int testArea = testMode.getHeight() * testMode.getWidth();
-				if(bestArea < testArea) {
-					bestArea = testArea;					
-					bestMode = testMode;					
-					bestDevice = testDevice;
+		double bestWidth = 0;
+		double bestHeight = 0;
+		if (gs.length > 0) {
+			GraphicsDevice bestDevice = null;
+			String preferredMonitor = mController.getProperty("preferred.monitor");
+			if (preferredMonitor != null) {
+				try {
+					int monitorIndex = Integer.parseInt(preferredMonitor);
+					if (monitorIndex < 0) {
+						logger.fine("preferred.monitor = " + preferredMonitor + ". Negative values disable the feature.");
+					} else if (monitorIndex < gs.length) {
+						bestDevice = gs[monitorIndex];
+						DisplayMode dm = bestDevice.getDisplayMode();
+						AffineTransform t = bestDevice.getDefaultConfiguration().getDefaultTransform();
+						bestWidth = dm.getWidth() / t.getScaleX();
+						bestHeight = dm.getHeight() / t.getScaleY();;
+						logger.config("Using preferred.monitor = " + preferredMonitor 
+								+ " @ resolution: " + bestWidth + "x" + bestHeight);
+					} else {
+						logger.warning("Ignoring preferred.monitor = " + preferredMonitor + ".\n" 
+								+ "Only " + gs.length + " monitors are available.");
+					}
+				} catch (NumberFormatException ex) {
+					logger.warning("Invalid preferred.monitor = " + preferredMonitor + " in prefs");
 				}
+			}
+			if (bestDevice == null) { // if not specified in prefs file or if value is out of range
+				int bestMonitor = 0;
+				double bestArea = 0;
+				for (int i = 0; i < gs.length; i++) {
+					GraphicsDevice testDevice = gs[i];
+					AffineTransform t = testDevice.getDefaultConfiguration().getDefaultTransform();
+					DisplayMode testMode = testDevice.getDisplayMode();
+					int testWidth = testMode.getWidth();
+					int testHeight = testMode.getHeight();
+					double testArea = testHeight * testWidth;
+					if ( "true" .equals( System.getProperty( "vzome.glcanvas.rescaling" ) ) ) {
+					    testArea = testArea / ( t.getScaleX() * t.getScaleY() );
+					}
+					if (bestArea < testArea) {
+						bestArea = testArea;
+						bestDevice = testDevice;
+						bestWidth = testWidth;
+						bestHeight = testHeight;
+						bestMonitor = i;
+					}
+				}
+				logger.config("Using monitor[" + bestMonitor + "] @ resolution: " + bestWidth + "x" + bestHeight);
 			}
 			Rectangle bounds = bestDevice.getDefaultConfiguration().getBounds();
 			this.setLocation(bounds.x, bounds.y);
-			int n = 15, d = n + 1; // set size to 15/16 of full screen size then maximize it
-			this.setSize(bestMode.getWidth() * n/d, bestMode.getHeight() * n/d);
 		}
-		this.setExtendedState(java.awt.Frame.MAXIMIZED_BOTH);
 
-        this.pack();
-        this.setVisible( true );
-        this.setFocusable( true );
+		try {
+			// This is where the GraphicsConfiguration failed on David's Windows 10 using Java 17
+			// before including the "--add-exports" JVM args to the build 
+			this.pack();
+	        this.setVisible( true );
+	        // Java 17 seems to successfully set the frame size and extended state only after the frame is visible.
+	        if(bestWidth > 0 && bestHeight > 0) {
+				double n = 15, d = n + 1; // set NORMAL size to 15/16 of scaled full screen size then maximize it
+				double downSize = n/d;
+				int scaledWidth = (int)(bestWidth * downSize);
+				int scaledHeight = (int)(bestHeight * downSize);
+				this.setSize(scaledWidth, scaledHeight);
+	        }
+	        this.setExtendedState(MAXIMIZED_BOTH);
+	        this.setFocusable( true );
+		} catch (Exception ex) {
+			ex.printStackTrace();
+			final String msg = "Failed to initialize GraphicsConfiguration.\nExiting the application.";
+			errors.reportError(msg, new Object[] { ex } );
+			// go ahead and exit so the process is killed
+			// and log files have their associated .lck files removed correctly.
+			JOptionPane.showMessageDialog( null, msg, "vZome Fatal Error", JOptionPane.ERROR_MESSAGE );
+			System.exit(-1);
+		}
 
-
-        new ExclusiveAction( this .getExcluder() )
+        SwingWorker<Exception, Object> finisher = new SwingWorker<Exception, Object>()
         {
-			@Override
-            protected void doAction( ActionEvent e ) throws Exception
+            @Override
+            protected Exception doInBackground() throws Exception
             {
-                mController .actionPerformed( this, "finish.load" );
-
-                String title = mController .getProperty( "window.title" );
-                boolean migrated = mController .propertyIsTrue( "migrated" );
-                
-                boolean asTemplate = mController .propertyIsTrue( "as.template" );
-                URL url = null; // TODO
-
-                if ( ! mController .userHasEntitlement( "model.edit" ) )
-                {
-                    mController .actionPerformed( e .getSource(), "switchToArticle" );
-                    if ( url != null )
-                        title = url .toExternalForm();
-                    migrated = false;
+                try {
+                    mController .actionPerformed( this, "finish.load" );
+                    return null;
+                } catch ( Exception e ) {
+                    logger .log( Level.INFO, e .getMessage(), e );
+                    return e;
                 }
+            }
 
-                if ( ! asTemplate && migrated ) { // a migration
-                    final String NL = System .getProperty( "line.separator" );
-                    if ( mController .propertyIsTrue( "autoFormatConversion" ) )
-                    {
-                        if ( mController .propertyIsTrue( "formatIsSupported" ) )
-                            JOptionPane .showMessageDialog( DocumentFrame.this,
-                                    "This document was created by an older version." + NL + 
-                                    "If you save it now, it will be converted automatically" + NL +
-                                    "to the current format.  It will no longer open using" + NL +
-                                    "the older version.",
-                                    "Automatic Conversion", JOptionPane.INFORMATION_MESSAGE );
-                        else
-                        {
-                            title = null;
-                            DocumentFrame.this .makeUnnamed();
-                            JOptionPane .showMessageDialog( DocumentFrame.this,
-                                    "You have \"autoFormatConversion\" turned on," + NL + 
-                                    "but the behavior is disabled until this version of vZome" + NL +
-                                    "is stable.  This converted document is being opened as" + NL +
-                                    "a new document.",
-                                    "Automatic Conversion Disabled", JOptionPane.INFORMATION_MESSAGE );
-                        }
-                    }
-                    else
-                    {
-                        title = null;
-                        DocumentFrame.this .makeUnnamed();
+            @Override
+            protected void done()
+            {
+                try {
+                    Exception error = get();
+                    if ( error != null ) {
                         JOptionPane .showMessageDialog( DocumentFrame.this,
-                                "This document was created by an older version." + NL + 
-                                "It is being opened as a new document, so you can" + NL +
-                                "still open the original using the older version.",
-                                "Outdated Format", JOptionPane.INFORMATION_MESSAGE );
+                                error .getLocalizedMessage(),
+                                "Error Loading Document", JOptionPane.ERROR_MESSAGE );
+                        // setting "visible" to FALSE will remove this document from the application controller's 
+                        // document collection so its document count is correct and it cleans up correctly 
+                        mController .setProperty( "visible", Boolean.FALSE );
+                        DocumentFrame.this .dispose();
                     }
+                    else {
+                        String title = mController .getProperty( "window.title" );
+                        boolean migrated = mController .propertyIsTrue( "migrated" );
+                        
+                        boolean asTemplate = mController .propertyIsTrue( "as.template" );
+
+//                        URL url = null; // TODO
+                        if ( ! mController .userHasEntitlement( "model.edit" ) )
+                        {
+                            mController .actionPerformed( DocumentFrame.this, "switchToArticle" );
+//                            if ( url != null )
+//                                title = url .toExternalForm();
+                            migrated = false;
+                        }
+
+                        if ( ! asTemplate && migrated ) { // a migration
+                            final String NL = System .getProperty( "line.separator" );
+                            if ( mController .propertyIsTrue( "autoFormatConversion" ) )
+                            {
+                                if ( mController .propertyIsTrue( "formatIsSupported" ) )
+                                    JOptionPane .showMessageDialog( DocumentFrame.this,
+                                            "This document was created by an older version." + NL + 
+                                            "If you save it now, it will be converted automatically" + NL +
+                                            "to the current format.  It will no longer open using" + NL +
+                                            "the older version.",
+                                            "Automatic Conversion", JOptionPane.INFORMATION_MESSAGE );
+                                else
+                                {
+                                    title = null;
+                                    DocumentFrame.this .makeUnnamed();
+                                    JOptionPane .showMessageDialog( DocumentFrame.this,
+                                            "You have \"autoFormatConversion\" turned on," + NL + 
+                                            "but the behavior is disabled until this version of vZome" + NL +
+                                            "is stable.  This converted document is being opened as" + NL +
+                                            "a new document.",
+                                            "Automatic Conversion Disabled", JOptionPane.INFORMATION_MESSAGE );
+                                }
+                            }
+                            else
+                            {
+                                title = null;
+                                DocumentFrame.this .makeUnnamed();
+                                JOptionPane .showMessageDialog( DocumentFrame.this,
+                                        "This document was created by an older version." + NL + 
+                                        "It is being opened as a new document, so you can" + NL +
+                                        "still open the original using the older version.",
+                                        "Outdated Format", JOptionPane.INFORMATION_MESSAGE );
+                            }
+                        }
+
+                        if ( title == null )
+                            title = mController .getProperty( "untitled.title" );
+                        
+                        DocumentFrame.this .setTitle( title );
+                    }
+                    super .done();
+                } catch (InterruptedException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
+                } catch (ExecutionException e) {
+                    // TODO Auto-generated catch block
+                    e.printStackTrace();
                 }
-
-                if ( title == null )
-                    title = mController .getProperty( "untitled.title" );
-                
-                DocumentFrame.this .setTitle( title );
             }
-
-			@Override
-            protected void showError( Exception e )
-            {
-                JOptionPane .showMessageDialog( DocumentFrame.this,
-                        e .getLocalizedMessage(),
-                        "Error Loading Document", JOptionPane.ERROR_MESSAGE );
-                // setting "visible" to FALSE will remove this document from the application controller's 
-                // document collection so its document count is correct and it cleans up correctly 
-                mController .setProperty( "visible", Boolean.FALSE );
-                DocumentFrame.this .dispose();
-            }
-            
-        } .actionPerformed( null );
+        };
+        finisher .execute();
     }
 
     private ExclusiveAction getExclusiveAction( final String action, final Controller controller )
@@ -772,7 +909,7 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
             break;
 
         case "Share":
-            enable = controller .getProperty( "window.file" ) != null;
+            enable = controller .getProperty( "original.path" ) != null;
             // We're doing this one immediately, because we need the listener attached if
             //  it is later enabled.  It is surprising that this has not been an issue for
             //  anything else!
@@ -842,8 +979,9 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                 actionListener = this .localActions;
                 break;
 
+            case "capture-wiggle-gif":
             case "capture-animation":
-                actionListener = new ControllerFileAction( fileDialog, false, command, "png", controller );
+                actionListener = new ControllerFileAction( fileDialog, false, command, "gif", controller );
                 break;
 
             default:
@@ -878,14 +1016,6 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
                 else if ( command .startsWith( "export." ) ) {
                     String ext = command .substring( "export." .length() );
                     ext = controller .getProperty( "exportExtension." + ext );
-                    switch ( ext ) {
-                    case "vrml": ext = "wrl"; break;
-                    case "size": ext = "txt"; break;
-                    case "partslist": ext = "txt"; break;
-                    case "partgeom": ext = "vef"; break;
-                    default:
-                        break;
-                    }
                     actionListener = new ControllerFileAction( fileDialog, false, command, ext, controller );
                 }
                 else {
@@ -938,21 +1068,18 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
 //                viewControl .setVisible( true );
                 mExcluder .release();
             }
-            createLessonPanel();
             modelArticleCardLayout .show( modelArticleEditPanel, mode );
             modelArticleEditPanel .setMinimumSize( new Dimension( width, 500 ) );
             modelArticleEditPanel .setPreferredSize( new Dimension( width, 800 ) );
 			break;
 
 		case "has.pages":
-		    // lessonPanel is necessary for thumbnails to render when loading a file
-		    createLessonPanel();
-            if ( articleButton != null )
+            if ( scenesButton != null )
             {
                 boolean enable = e .getNewValue() .toString() .equals( "true" );
-                articleButton .setEnabled( enable );
+                scenesButton .setEnabled( enable );
                 if ( ! enable )
-                    modelButton .doClick();
+                    designButton .doClick();
             }
 			break;
 			
@@ -980,16 +1107,24 @@ public class DocumentFrame extends JFrame implements PropertyChangeListener, Con
 	        int response = JOptionPane.showConfirmDialog( DocumentFrame.this, "Do you want to save your changes?",
 	                "file is changed", JOptionPane.YES_NO_CANCEL_OPTION, JOptionPane.WARNING_MESSAGE );
 
-	        if ( response == JOptionPane.CANCEL_OPTION )
-	            return false;
-	        if ( response == JOptionPane.YES_OPTION )
+	        switch(response) {
+	        case JOptionPane.YES_OPTION: 
 	            try {
 	                localActions .actionPerformed( new ActionEvent( DocumentFrame.this, ActionEvent.ACTION_PERFORMED, "save" ) );
-	                return false;
 	            } catch ( RuntimeException re ) {
-	                logger.log( Level.WARNING, "did not save due to error", re );
-	                return false;
+	                logger.log( Level.WARNING, "Did not save due to error", re );
 	            }
+	            return false; // Queued up the file-save action instead of closing the window
+	        case JOptionPane.NO_OPTION:
+	        	break; // Don't want to save, so go ahead close the main window
+	        case JOptionPane.CANCEL_OPTION:
+	        	return false; // Don't close window
+	        case JOptionPane.CLOSED_OPTION:
+	        	return false; // Don't close window
+	        default:
+	        	logger.warning("Ignoring undocumented response: " + response );
+	        	return false; // Don't close window
+	        }
 	    }
 	    dispose();
 	    mController .setProperty( "visible", Boolean.FALSE );
